--- a/src/input.css
+++ b/src/input.css
@@ -1,9 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
-
 body {
     font-family: "Rubik", sans-serif;
+}
+
+.active {
+    color: white;
 }
